[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bullet_yellow.png" type="Texture" id=1]
[ext_resource path="res://scenes/bullet/bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 1 )

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 133
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 12, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 15, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Wall" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
visible = false
position = Vector2( 15, 0 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Wall" to="." method="_on_Wall_body_entered"]
